# nexus-streamer-python

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README-dev.md  README.md  changes.md  create_data_sources_from_nexus.py  data_chunk.py  data_source.py  hdf5_data_source.py  kafka_producer.py  launch_nexus_streamer.py  publisher.py  requirements-dev.txt  requirements.txt  setup.cfg  source_to_stream.py
conda/: bld.bat  build.sh  meta.yaml
nexus_streamer/: convert_units.py  create_data_sources_from_nexus.py  data_source.py  event_data_source.py  generate_json_description.py  hdf5_data_source.py  kafka_producer.py  log_data_source.py  parse_commandline_args.py  publish_run_message.py  publisher.py  source_to_stream.py
perf_tests/: after_ev42_serialise_improve.cprof  after_event_chunk_loading_improve.cprof  before_ev42_serialise_improve.cprof
src/: run_nexus_streamer.py
src/nexus_streamer/: create_data_sources_from_nexus.py  data_source.py  event_data_source.py  generate_json_description.py  isis_data_source.py  launch_nexus_streamer.py  log_data_source.py  parse_commandline_args.py  publish_run_message.py  read_detector_spectrum_map_file.py  source_to_stream.py
