[metadata]
name = NeXus Streamer
version = development
home-page = https://gitlab.com/mdjones/nexus-streamer-python
url = https://gitlab.com/mdjones/nexus-streamer-python
license = BSD 2-clause
license_file = LICENSE
platform = any

[coverage:report]
show_missing = true

[flake8]
ignore = E501, E203, E402, W503, Q000, W293
# E501 & E203: Formatting handled by Black
# E402 complains about imports not being at the top
# W503 complains about splitting if across lines which conflicts with Black
# Q000 complains about using "" and not '' which conflicts with Black
# W293 blank lines with whitespace, conflicts with Black in doc comments
exclude = README.md

[tool:pytest]
addopts = -s
junit_family=xunit2
testpaths = ./tests

[mypy]
python_version = 3.7
check_untyped_defs = True

[mypy-confluent_kafka.*]
ignore_missing_imports = True

[mypy-streaming_data_types.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-graypy.*]
ignore_missing_imports = True

[mypy-pint.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-configargparse.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-flatbuffers.*]
ignore_missing_imports = True
